# simplelogin-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
simplelogin/: alias.py  cli.py  main.py  settings.py  simplelogin-cli.py  test__simplelogin.py  test_cli.py
simplelogin_cli/: alias.py  aliases.py  auth.py  main.py  settings.py
