[tool.poetry]
name = "simplelogin-cli"
version = "0.1.0"
description = ""
authors = ["Joseph Demcher <joedemcher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
requests = "^2.31.0"
keyring = "^24.3.0"
black = "^23.12.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
